; ModuleID = '/home/carl/AnghaBench/git/extr_git.c_setup_auto_pager.c'
source_filename = "/home/carl/AnghaBench/git/extr_git.c_setup_auto_pager.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@use_pager = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_auto_pager(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @use_pager, align 4
  %6 = icmp ne i32 %5, -1
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = call i64 (...) @pager_in_use()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %2
  br label %20

11:                                               ; preds = %7
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @check_pager_config(i8* %12)
  store i32 %13, i32* @use_pager, align 4
  %14 = load i32, i32* @use_pager, align 4
  %15 = icmp eq i32 %14, -1
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* @use_pager, align 4
  br label %18

18:                                               ; preds = %16, %11
  %19 = call i32 (...) @commit_pager_choice()
  br label %20

20:                                               ; preds = %18, %10
  ret void
}

declare dso_local i64 @pager_in_use(...) #1

declare dso_local i32 @check_pager_config(i8*) #1

declare dso_local i32 @commit_pager_choice(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
